# sdp_bot

./: README.md
install/: local_setup.sh  setup.sh
install/fix_motor_control/lib/fix_motor_control/: fix_motor_control
install/fix_motor_control/share/fix_motor_control/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/fix_motor_control/share/fix_motor_control/launch/: display.launch.py
install/fix_motor_control/share/fix_motor_control/urdf/: sdp_bot.urdf
install/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/log/: latest_build
install/sdp_bot/lib/sdp_bot/: bno055  control  imu_tf_broadcaster  imu_transform  tele
install/sdp_bot/share/sdp_bot/: diff_drive_hardware.xml  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/: nav2_client_simple.py  nav2_flask_client.py
src/fix_motor_control/: package.xml  setup.cfg  setup.py
src/fix_motor_control/launch/: display.launch.py
src/sdp_bot/: package.xml  setup.cfg  setup.py
src/sdp_bot/config/: ekf.yaml  min_params.yaml  nav2_params.yaml  nav2_params_v2.yaml
src/sdp_bot/launch/: display.launch.py  display_v2.launch.py  display_v3.launch.py  display_v4.launch.py  display_v5.launch.py  display_v6.launch.py  ekf.launch.py  gz_display.launch.py  imu_lidar_test.launch.py  imu_test.launch.py  ros2_control_v1.launch.py  rplidar_test.launch.py  sdp.launch.py
src/sdp_bot/rviz/: config_imu_lidar.rviz
src/sdp_bot/sdp_bot/: bno055.py  control.py  diff_drive_hardware.py
src/sdp_bot/urdf/: all_bot.sdf  all_bot.urdf  all_bot_processed.urdf  all_bot_with_footprint.urdf  gz_sdp_bot.sdf  gz_sdp_bot.urdf  sdp_bot.urdf  sdp_bot.urdf.xacro  sdp_bot_core.xacro
(+18 files in other folders)
